docker qo'shildi va database aws rds ga o'zgartirildi
